# spell-fight-server

./: Cargo.toml  README.md
src/: main.rs
src/authorization/: bearer_auth.rs  mod.rs
src/controller/: facebook_controller.rs  mod.rs  user_controller.rs
src/env/: env_reader_factory.rs  file_type.rs  json_reader.rs  mod.rs  reader.rs
src/model/: facebook_profile.rs  letter.rs  mod.rs  oauth_callback_data.rs  player_session_messages.rs  room_manager_messages.rs  user.rs  ws_request.rs  ws_response.rs
src/repository/: fake_user_repository.rs  mod.rs  mongo_db_user_repository.rs  repository.rs
src/service/: dictionary_service.rs  env_service.rs  facebook_service.rs  mod.rs  user_service.rs
src/util/: constants.rs
src/ws/: letters.rs  mod.rs  player_session.rs  room.rs  room_manager.rs  ws_route.rs
